Fix some fonts, and align icon.

--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -11,7 +11,7 @@
 }
 
 @font-face {
-    font-family: 'Edmonsans';
+    font-family: 'Edmondsans';
     src: url('fonts/edmondsans-regular-webfont.eot');
     src: url('fonts/edmondsans-regular-webfont.eot?#iefix') format('embedded-opentype'),
          url('fonts/edmondsans-regular-webfont.woff') format('woff'),
